; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-common/extr_smp.c_ipi_flush_icache.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mach-common/extr_smp.c_ipi_flush_icache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blackfin_flush_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ipi_flush_icache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipi_flush_icache(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.blackfin_flush_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.blackfin_flush_data*
  store %struct.blackfin_flush_data* %5, %struct.blackfin_flush_data** %3, align 8
  %6 = load %struct.blackfin_flush_data*, %struct.blackfin_flush_data** %3, align 8
  %7 = ptrtoint %struct.blackfin_flush_data* %6 to i64
  %8 = load %struct.blackfin_flush_data*, %struct.blackfin_flush_data** %3, align 8
  %9 = ptrtoint %struct.blackfin_flush_data* %8 to i64
  %10 = add i64 %9, 8
  %11 = call i32 @blackfin_dcache_invalidate_range(i64 %7, i64 %10)
  %12 = load %struct.blackfin_flush_data*, %struct.blackfin_flush_data** %3, align 8
  %13 = getelementptr inbounds %struct.blackfin_flush_data, %struct.blackfin_flush_data* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.blackfin_flush_data*, %struct.blackfin_flush_data** %3, align 8
  %16 = getelementptr inbounds %struct.blackfin_flush_data, %struct.blackfin_flush_data* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @blackfin_icache_flush_range(i32 %14, i32 %17)
  ret void
}

declare dso_local i32 @blackfin_dcache_invalidate_range(i64, i64) #1

declare dso_local i32 @blackfin_icache_flush_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
